<resources>
    <string name="app_name">E-Lib</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="welcome">Welcome %s</string>
    <string name="add">Add</string>
    <string name="book_name">Book Name</string>
    <string name="author">Author</string>
    <string name="book_successfully_added">Book successfully added!</string>
    <string name="book_could_not_add">Book could not add! Check your connection</string>
    <string name="register_failed_check_your_connection">Register failed! Check your connection.</string>
    <string name="register_succeed">Register succeed!</string>
    <string name="successfully_logged_in">Successfully logged in.</string>
    <string name="login_failed_check_your_connection">Login failed! Check your connection.</string>
    <string name="login_failed_check_your_info">Login failed! Check your information.</string>
    <string name="please_contact_with_developer">Please contact with developer</string>
    <string name="connection_error">Connection error!</string>
    <string name="wrong_user_info">Wrong user info</string>
    <string name="remember_me">Remember me</string>
    <string name="needed_permissions_are_not_granted">Needed permissions are not granted!</string>
    <string name="unknown_error_occurred">An unknown error occurred.</string>
    <string name="new_book">New book</string>
    <string name="refresh">Refresh</string>
    <string name="add_book">Add book</string>
    <string name="logout">Logout</string>
    <string name="not_supported_yet">This feature is not supported yet.</string>
    <string name="friends">Friends</string>
    <string name="account">Account</string>
    <string name="contribution">Contribution</string>
    <string name="settings">Settings</string>
    <string name="restart_app">Restart App</string>
    <string name="language">Language</string>
    <string name="restart_needed__change">Restart needed to apply all changes correctly</string>
    <string name="ok">OK</string>
    <string name="no_contribution">You have no contribution yet.</string>
    <string name="id" translatable="false">ID%s</string>
    <string name="reg_date">Registration date%s</string>
    <string name="save">Save</string>
    <string name="font" translatable="false">Font</string>
    <string name="book_id">Book ID</string>
    <string name="added_by">Added By</string>
    <string name="comments">Comments</string>
    <string name="details">Details</string>
    <string name="email_or_password_cannot_be_empty">E-Mail or password can not be empty</string>
    <string name="verify_password">Please verify your password</string>
    <string name="ensure_valid_email">Please ensure valid E-Mail</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="email_or_username">E-Mail or Username</string>
    <string name="need_email">To run correctly remember me needed an e-mail</string>
    <string name="account_settings">Account Settings</string>
    <string name="book_details">Book Details</string>
    <string name="book_name_cannot_be_empty">Book name cannot be empty</string>
    <string name="author_cannot_be_empty">Author cannot be empty</string>
    <string name="class_not_foud_exception_msg">
        The application was corrupted. Please download application again.
        If it doesn\'t work please contact with developer
    </string>
    <string name="language_and_input">Languages and Input</string>
    <string name="theme">Theme</string>
    <string name="suspended_user">Suspended user</string>
    <string name="type">Type</string>
    <string name="page_count">Page Count</string>
    <string name="cabinet_number">Cabinet Number</string>
    <string name="publication_year">Publication Year</string>
    <string name="other_information">Other Information</string>
    <string name="reserve">Reserve</string>
    <string name="offline_mode_activated">Offline mode activated</string>
    <string name="turkish" translatable="false">Türkçe</string>
    <string name="english" translatable="false">English</string>
    <string name="german" translatable="false">Deutsch</string>
    <string name="update">Update</string>
    <string name="new_version_released">New version is released</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="account_updated">Your account info has changed!</string>
    <string name="do_you_agree">Do you agree?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="info_cannot_change_without_any_change">Info cannot be updated without any change</string>
    <string name="report_error">Report Error</string>
    <string name="search_book">Search book</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="book">Book</string>
    <string name="sort">Sort</string>
    <string name="a_to_z_book_name">A to Z (Book Name)</string>
    <string name="z_to_a_book_name">Z to A (Book Name)</string>
    <string name="old_to_new">Old to New</string>
    <string name="new_to_old">New to Old</string>
    <string name="a_to_z_author_name">A to Z (Author Name)</string>
    <string name="z_to_a_author_name">Z to A (Author Name)</string>
    <string name="more_popular">More Popular</string>
    <string name="less_popular">Less Popular</string>
    <string name="title_activity_basic_material3">BasicActivityMaterial3</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_item_detail_host">ItemDetailHostActivity</string>
    <string name="title_ıtem_list">Items</string>
    <string name="title_ıtem_detail">Item Detail</string>
    <string name="title_item_list">items</string>
    <string name="title_item_detail">item Detail</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main_responsive">MainActivity_Responsive</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_settings">Settings</string>
    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="title_activity_main_compose">MainComposeActivity</string>
</resources>