<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_menu_actionbar_account"
        android:title="@string/account" />

    <item
        android:id="@+id/toolbar_menu_actionbar_debug"
        android:title="Debug"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/baseline_vpn_key_24" />

    <item
        android:id="@+id/toolbar_menu_actionbar_search"
        android:title="search"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/toolbar_menu_actionbar_settings"
        android:title="@string/settings"
        app:showAsAction="always"
        android:icon="@drawable/baseline_settings_24"/>

    <item
        android:id="@+id/toolbar_menu_actionbar_logout"
        android:title="@string/logout" />

</menu>