<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.LoginActivity">

    <include
        layout="@layout/actionbar"
        android:id="@+id/login_activity_actionbar" />

    <ImageView
        android:id="@+id/Activity_login_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_activity_actionbar"
        android:layout_marginTop="50dp"
        android:src="@drawable/app_icon" />

    <EditText
        android:id="@+id/login_activity_et_email_or_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Activity_login_logo"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_or_username"
        android:background="@drawable/edittext_bg"
        android:padding="10dp" />

    <EditText
        android:id="@+id/login_activity_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_activity_et_email_or_username"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/edittext_bg"
        android:padding="10dp" />

    <RelativeLayout
        android:id="@+id/activity_login_layout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/login_activity_et_password">

        <Button
            android:id="@+id/login_activity_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/login"
            style="@style/Theme.ELib"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/login_activity_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"/>

    </RelativeLayout>

    <CheckBox
        android:id="@+id/login_activity_cb_rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_marginTop="10dp"
        android:layout_below="@id/activity_login_layout_button"
        android:layout_marginHorizontal="45dp"/>

</RelativeLayout>