<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ErrorActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/error_activity_icon"
            android:layout_width="148dp"
            android:layout_height="143dp"
            android:contentDescription="@string/unknown_error_occurred"
            android:src="@drawable/app_icon" />

        <TextView
            android:id="@+id/error_activity_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_activity_icon"
            android:layout_centerHorizontal="true"
            android:text="Hata"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/error_activity_tv_errorMessage"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_activity_tittle"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:text="@string/unknown_error_occurred" />

        <Button
            android:id="@+id/error_activity_btn_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_activity_tv_errorMessage"
            android:layout_marginTop="5dp"
            android:layout_centerInParent="true"
            android:background="@drawable/button_bg"
            android:text="@string/report_error"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/error_activity_btn_restart_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_activity_btn_report"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_bg"
            android:text="@string/restart_app" />

    </RelativeLayout>

</RelativeLayout>